--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16),
       0px 2px 1px rgba(46, 47, 66, 0.08);
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-portfolio-names {
@@ -298,6 +298,7 @@ img {
 
 .aplication-image {
   overflow: hidden;
+  position: relative;
 }
 
 .aplication-text {
@@ -308,6 +309,8 @@ img {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 0;
 }
 
 /* --------------------- FOOTER*/
@@ -336,9 +339,10 @@ img {
 }
 
 .footer-social-title {
-  margin: 0 0 16px 16px;
+  margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
+  color: #FFFFFF;
 }
 
 .info .social-links {
@@ -347,4 +351,23 @@ img {
 
 .info-container {
   margin-right: 120px;
+}
+
+.social-link {
+  height: 40px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-link {
+  height: 100%;
+  width: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-link:hover {
+  background-color: #31d0aa;
 }
